import tkinter as tk
from tkinter import ttk
from View.observer import Observer

class VisualizationView(ttk.Frame, Observer):
    def __init__(self, master):
        super().__init__(master)
        self.text = tk.Text(self)
        self.text.pack(fill='both', expand=True)

    def update(self):
        # Implement visualization update logic
        pass
